@@ -1,10 +1,11 @@
 xz-utils (4.999.9beta+20100212-4) unstable; urgency=low
 
-  * debian/copyright: clean up and include more details.
   * debian/control: Build-Depends: autopoint instead of cvs.
     Closes: #572481.
+  * debian/copyright: Clean up and include more details.
+  * debian/rules get-orig-source: Unindent comment lines.
 
- -- Jonathan Nieder <jrnieder@gmail.com>  Thu, 04 Mar 2010 07:55:33 -0600
+ -- Jonathan Nieder <jrnieder@gmail.com>  Thu, 04 Mar 2010 08:01:05 -0600
 
 xz-utils (4.999.9beta+20100212-3) unstable; urgency=low
 
